--- a/Prueba Angular/index.html
+++ b/Prueba Angular/index.html
@@ -8,10 +8,10 @@
   <title>Hola Mundo con Angular</title>
 </head>
 <body class="indigo" ng-controller="PrimerController">
-  <div class="container" >
+  <div class="container valign-wrapper" >
     <div class="row">
-        <div class="col s6">
-        <div class="card z-depth-3 indigo lighten-4 center-nico">
+        <div class="col s12">
+        <div class="card z-depth-3 indigo lighten-4">
           <div class="card-content">
             <span class="card-title black-text">Sign In</span>
             <form>
@@ -34,7 +34,7 @@
           </div>
         </div>
         </div>
-        <div class="col s6">
+        <!-- <div class="col s6">
           <h3 class="header">Usuarios</h3>
           <table>
         <thead>
@@ -50,7 +50,7 @@
           </tr>
         </tbody>
       </table>
-        </div>
+        </div> -->
     </div>
   </div>
 
