Se sube la pagina en blanco estandar

--- a/Codigo/page-blank.html
+++ b/Codigo/page-blank.html
@@ -18,7 +18,7 @@
   <title>Page Blank | Materialize - Material Design Admin Template</title>
 
   <!-- Favicons-->
-  <link rel="icon" href="images/favicon/logo-fav.png" sizes="32x32">
+  <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
   <!-- Favicons-->
   <link rel="apple-touch-icon-precomposed" href="images/favicon/apple-touch-icon-152x152.png">
   <!-- For iPhone -->
@@ -56,14 +56,12 @@
         <div class="navbar-fixed">
             <nav class="navbar-color">
                 <div class="nav-wrapper">
+                    <!-- LOGO DEL SISTEMAAAA -->
                     <ul class="left">                      
-                      <li><h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img src="images/logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1></li>
+                      <li><h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img src="images/materialize-logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1></li>
                     </ul>
-                    <div class="header-search-wrapper hide-on-med-and-down">
-                        <i class="mdi-action-search"></i>
-                        <input type="text" name="Search" class="header-search-input z-depth-2" placeholder="Explore Materialize"/>
-                    </div>
-                    <ul class="right hide-on-med-and-down">
+                    <!-- LA PARTE DE ARRIBA A LA DERECHA -->
+                    <!-- <ul class="right hide-on-med-and-down">
                         <li><a href="javascript:void(0);" class="waves-effect waves-block waves-light translation-button"  data-activates="translation-dropdown"><img src="images/flag-icons/United-States.png" alt="USA" /></a>
                         </li>
                         <li><a href="javascript:void(0);" class="waves-effect waves-block waves-light toggle-fullscreen"><i class="mdi-action-settings-overscan"></i></a>
@@ -74,7 +72,7 @@
                         </li>                        
                         <li><a href="#" data-activates="chat-out" class="waves-effect waves-block waves-light chat-collapse"><i class="mdi-communication-chat"></i></a>
                         </li>
-                    </ul>
+                    </ul> -->
                     <!-- translation-button -->
                     <ul id="translation-dropdown" class="dropdown-content">
                       <li>
@@ -402,38 +400,16 @@
       <!-- START CONTENT -->
       <section id="content">
         
-        <!--breadcrumbs start-->
-        <div id="breadcrumbs-wrapper">
-            <!-- Search for small screen -->
-            <div class="header-search-wrapper grey hide-on-large-only">
-                <i class="mdi-action-search active"></i>
-                <input type="text" name="Search" class="header-search-input z-depth-2" placeholder="Explore Materialize">
-            </div>
-          <div class="container">
-            <div class="row">
-              <div class="col s12 m12 l12">
-                <h5 class="breadcrumbs-title">Blank Page</h5>
-                <ol class="breadcrumbs">
-                    <li><a href="index.html">Dashboard</a></li>
-                    <li><a href="#">Pages</a></li>
-                    <li class="active">Blank Page</li>
-                </ol>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--breadcrumbs end-->
+
         
 
         <!--start container-->
         <div class="container">
           <div class="section">
 
-            <p class="caption">A Simple Blank Page to use it for your custome design and elements.</p>
-            <div class="divider"></div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
           </div>
-          <!-- Floating Action Button -->
+          <!-- Floating Action Button  BOTONO CHIQUITO DEL COSTADO-->
             <div class="fixed-action-btn" style="bottom: 50px; right: 19px;">
                 <a class="btn-floating btn-large">
                   <i class="mdi-action-stars"></i>
