--- a/Codigo/pedidos.html
+++ b/Codigo/pedidos.html
@@ -499,15 +499,16 @@
             <br>
             <form action="#">
               <div class="row">
+                <div ng-init="delivery=0"></div>
                 <div class="col s6 m6 l6">
                   <p>
-                    <input name="group1" type="radio" id="test2" class="with-gap" checked />
+                    <input name="group1" type="radio" id="test2" class="with-gap" ng-checked="delivery==0" ng-model="delivery" ng-value="0" ng-change="actualizarTotal()"/>
                     <label for="test2" class="black-text"><b>Para Llevar</b></label>
                   </p>
                 </div>
                 <div class="col s6 m6 l6">
                   <p>
-                    <input name="group1" type="radio" id="test1" class="with-gap"/>
+                    <input name="group1" type="radio" id="test1" class="with-gap" ng-model="delivery" ng-value="10" ng-change="actualizarTotal()"/>
                     <label for="test1" class="black-text"><b>Delivery</b></label>
                   </p>
                 </div>
@@ -538,11 +539,41 @@
           <div class="container">
             <div class="row">
               <div class="col s12 m12 l12">
-                <a class="btn col s12 m12 l12">Confirmar</a>
+                <a class="btn col s12 m12 l12 modal-trigger" href="#modal2">Confirmar</a>
               </div>
             </div>
-          </divcontainer>
-          
+            <div id="modal2" class="modal modal-fixed-footer">
+              <div class="modal-content">
+                <div class="container">
+                  <span class="card-title">Tu Pedido</span>
+                <div class="divider grey"></div>
+                <div class="col s12 m12 l12">
+                  <table>
+                    <thead>
+                      <tr>
+                        <th>Item</th>
+                        <th>Descripcion</th>
+                        <th>Cantidad</th>
+                        <th>Precio</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr ng-repeat="item in pedido">
+                        <td>Item</td>
+                        <td ng-bind="item.nombre"></td>
+                        <td>1</td>
+                        <td ng-bind="item.precio"></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <a href="#" class="waves-effect waves-red btn-flat modal-action modal-close">Cancelar</a>
+                <a href="#" class="waves-effect waves-green btn-flat modal-action modal-close">Confirmar</a>
+              </div>
+            </div>
         </div>
       </div>
     </div>
