Se da routing a las paginas - nueva page-blanck

--- a/Codigo/user-login.html
+++ b/Codigo/user-login.html
@@ -15,10 +15,10 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="description" content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google. ">
   <meta name="keywords" content="materialize, admin template, dashboard template, flat admin template, responsive admin template,">
-  <title>Ingresar | OkSocios</title>
+  <title>Ingresar | Cazimba</title>
 
   <!-- Favicons-->
-  <link rel="icon" href="images/favicon/logo-fav.png" sizes="32x32">
+  <link rel="icon" href="images/favicon/logofav.png" sizes="32x32">
   <!-- Favicons-->
   <link rel="apple-touch-icon-precomposed" href="images/favicon/apple-touch-icon-152x152.png">
   <!-- For iPhone -->
@@ -57,7 +57,7 @@
       <form class="login-form">
         <div class="row">
           <div class="input-field col s12 center">
-            <img src="images/OkSociosLogo.png" alt="" class=" responsive-img valign">
+            <img src="images/logo.png" alt="" class=" responsive-img valign">
             <!-- <p class="center login-form-text">OkSocios</p> -->
           </div>
         </div>
