--- a/Codigo/pedidos.html
+++ b/Codigo/pedidos.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="description" content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google. ">
     <meta name="keywords" content="materialize, admin template, dashboard template, flat admin template, responsive admin template,">
-    <title>Page Blank | Materialize - Material Design Admin Template</title>
+    <title>Pedidos | Cazimba</title>
 
     <!-- Favicons-->
     <link rel="icon" href="images/favicon/logofav.png" sizes="32x32">
@@ -58,7 +58,7 @@
           <div class="nav-wrapper">
             <!-- LOGO DEL SISTEMAAAA -->
             <ul class="left">                      
-              <li><h1 class="logo-wrapper"><a href="" class="brand-logo darken-1"><img src="images/logo2.png" alt="cazimba logo"></a> <span class="logo-text">Cazimba</span></h1></li>
+              <li><h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img src="images/logo2.png" alt="cazimba logo"></a> <span class="logo-text">Cazimba</span></h1></li>
             </ul>
             <!-- LA PARTE DE ARRIBA A LA DERECHA -->
             <ul class="right hide-on-med-and-down">
@@ -93,9 +93,9 @@
                 </div>
               </div>
             </li>
-            <li class="bold"><a href="app-calendar.html" class="waves-effect waves-cyan"><i class="mdi-av-web"></i> Pedidos</a>
+            <li class="bold"><a href="#" class="waves-effect waves-cyan"><i class="mdi-av-web"></i> Pedidos</a>
             </li>
-            <li class="bold"><a href="app-calendar.html" class="waves-effect waves-cyan"><i class="mdi-maps-local-restaurant"></i> Comidas</a>
+            <li class="bold"><a href="tipoDeComidas.html" class="waves-effect waves-cyan"><i class="mdi-maps-local-restaurant"></i> Comidas</a>
             </li>
             <li class="li-hover"><div class="divider"></div></li>
             <li><a href="user-lock-screen.html"><i class="mdi-action-lock-outline"></i> Lock</a>
