--- a/Codigo/user-lock-screen.html
+++ b/Codigo/user-lock-screen.html
@@ -15,10 +15,10 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="description" content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google. ">
   <meta name="keywords" content="materialize, admin template, dashboard template, flat admin template, responsive admin template,">
-  <title>Pantalla Bloqueada | OkSocios</title>
+  <title>Pantalla Bloqueada | Cazimba</title>
 
   <!-- Favicons-->
-  <link rel="icon" href="images/favicon/logo-fav.png" sizes="32x32">
+  <link rel="icon" href="images/favicon/logofav.png" sizes="32x32">
   <!-- Favicons-->
   <link rel="apple-touch-icon-precomposed" href="images/favicon/apple-touch-icon-152x152.png">
   <!-- For iPhone -->
@@ -57,8 +57,8 @@
       <form class="login-form">
         <div class="row">
           <div class="input-field col s12 center">
-            <img src="images/avatar.jpg" alt="" class="circle responsive-img valign profile-image-login">
-            <h4 class="header">Facu Silvestre</h4>            
+            <img src="images/avatar3.jpg" alt="" class="circle responsive-img valign profile-image-login">
+            <h4 class="header">Nico Rios</h4>            
           </div>
         </div>
         <div class="row margin">
