--- a/Codigo/user-register.html
+++ b/Codigo/user-register.html
@@ -15,10 +15,10 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="description" content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google. ">
   <meta name="keywords" content="materialize, admin template, dashboard template, flat admin template, responsive admin template,">
-  <title>Registrarse | OkSocios</title>
+  <title>Registrarse | Cazimba</title>
 
   <!-- Favicons-->
-  <link rel="icon" href="images/favicon/logo-fav.png" sizes="32x32">
+  <link rel="icon" href="images/favicon/logofav.png" sizes="32x32">
   <!-- Favicons-->
   <link rel="apple-touch-icon-precomposed" href="images/favicon/apple-touch-icon-152x152.png">
   <!-- For iPhone -->
