A ver si sale esto

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="description" content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google. ">
     <meta name="keywords" content="materialize, admin template, dashboard template, flat admin template, responsive admin template,">
-    <title>Page Blank | Materialize - Material Design Admin Template</title>
+    <title>Cazimba</title>
 
     <!-- Favicons-->
     <link rel="icon" href="images/favicon/logofav.png" sizes="32x32">
@@ -92,6 +92,8 @@
                   <p class="user-roal">Emprendedor</p>
                 </div>
               </div>
+            </li>
+            <li><a href="index.html"><i class="mdi-action-home"></i> Principal</a>
             </li>
             <li class="bold"><a href="pedidos.html" class="waves-effect waves-cyan"><i class="mdi-av-web"></i> Pedidos</a>
             </li>
