--- a/Codigo/page-blanck.html
+++ b/Codigo/page-blanck.html
@@ -93,6 +93,8 @@
                 </div>
               </div>
             </li>
+            <li><a href="index.html"><i class="mdi-action-home"></i> Principal</a>
+            </li>
             <li class="bold"><a href="pedidos.html" class="waves-effect waves-cyan"><i class="mdi-av-web"></i> Pedidos</a>
             </li>
             <li class="bold"><a href="tipoDeComidas.html" class="waves-effect waves-cyan"><i class="mdi-maps-local-restaurant"></i> Comidas</a>
