--- a/Codigo/user-login.html
+++ b/Codigo/user-login.html
@@ -77,7 +77,7 @@
         </div>
         <div class="row">          
           <div class="input-field col s12 m12 l12  login-text">
-              <input type="checkbox" id="remember-me" />
+              <input type="checkbox" class="filled-in" id="remember-me" />
               <label for="remember-me">Recordarme</label>
           </div>
         </div>
