--- a/Codigo/page-blanck.html
+++ b/Codigo/page-blanck.html
@@ -97,7 +97,9 @@
             </li>
             <li class="bold"><a href="pedidos.html" class="waves-effect waves-cyan"><i class="mdi-av-web"></i> Pedidos</a>
             </li>
-            <li class="bold"><a href="tipoDeComidas.html" class="waves-effect waves-cyan"><i class="mdi-maps-local-restaurant"></i> Comidas</a>
+            <li class="bold"><a href="tipoComidas.html" class="waves-effect waves-cyan"><i class="mdi-maps-local-restaurant"></i> Comidas</a>
+            </li>
+            <li><a href="user-login.html"><i class="mdi-action-face-unlock"></i> Empleados</a>
             </li>
             <li class="li-hover"><div class="divider"></div></li>
             <li><a href="user-lock-screen.html"><i class="mdi-action-lock-outline"></i> Lock</a>
